--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,99 +1,129 @@
-.header {
-  display: flex;
-  width: 100vw;
-  height: 135px;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-}
+@media (min-width: 1200px) {
+  .header{
+    overflow-y: visible;
+  }
+  .header-menu {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    margin-left: 380px;
+    justify-content: space-around;
+  }
 
-img {
-  width: 280px;
-  height: 100px;
-  margin-left: 40px;
-}
-
-ul {
-  display: flex;
-  justify-content: space-around;
-  width: 68vw;
-  margin-right: 40px;
-  height: 100%;
-  align-items: center;
-}
-
-li {
-  list-style: none;
-  text-transform: capitalize;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-ul li button {
-  all: unset;
-  width: 110px;
-  height: 50px;
-  background-color: rgb(16, 108, 73);
-  color: white;
-  font-weight: 100;
-}
-
-.material-symbols-outlined {
-  position: absolute;
-  transform: translate(0px, -2px);
-  font-size: 30px;
-}
-
-ul li:hover {
-  color: rgb(16, 108, 73);
-}
-
-@media (max-width: 1200px) {
   .hamburger-icon {
-    display: block;
-    font-size: 55px;
-    color: rgb(117, 117, 117);
-    margin-left: -110px;
-    border-radius: 10px;
-    border: 1px solid rgba(128, 128, 128, 0.413);
-    padding: 10px;
-    margin-top: -20px;
-    cursor: pointer;
-  }
-  .hamburger-icon:hover {
-    border: 1px solid rgba(128, 128, 128, 0.247);
-  }
-
-  .desktop-menu {
     display: none;
   }
 
- 
+  .header-menu li {
+    font-size: 22px;
+    font-weight: 500;
+  }
+  .typesButton{
+    position: relative;
+  }
+  .menu-component.open{
+    display: block;
+    position: absolute;
+    top: 100%;left: -60%;
+    width: 350px;
+    height: 430px;
+    border: 1px solid black;
 
+
+  }
+  
 }
 
-.desktop-menu.open {
+@media (max-width: 1200px) {
+  .header-menu {
+    display: none;
+  }
+
+  .header {
+    justify-content: space-between;
+  }
+
+  .hamburger-icon {
+    margin-right: 25px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.466);
+    padding: 4px;
+    cursor: pointer;
+  }
+  .hamburger-icon:hover {
+    border: 1px solid rgba(0, 0, 0, 0.166);
+  }
+
+  .header-menu.open {
+    display: flex;
+    flex-direction: column;
+    position: fixed; 
+    top: 135px;
+    left: 0;
+    width: 100vw;
+    height: 79vh;
+    background-color: white; 
+    z-index: 1000;
+    overflow-y: auto;
+    padding: 2rem;
+    box-sizing: border-box;
+  }
+  
+  .header-menu.open li{
+    font-size: 42px;
+    font-weight: 500;
+    text-align: left;
+  }
+
+ .header-menu.open .material-symbols-outlined {
+    font-size: 45px;
+    vertical-align: middle;
+  }
+}
+
+
+
+.header {
+  height: 130px;
+  width: 100%;
+  display: flex !important;
+  flex-direction: row;
+  align-items: center;
+}
+
+.header-menu li {
+  list-style: none;
+}
+.header-menu li:hover {
+  list-style: none;
+  color: green;
+}
+
+.header .logo {
+  width: 200px;
+  height: 150px;
+  margin-top:  20px;
+  margin-left:  48px;
+}
+
+.header-menu .loginBtn {
+  all: unset;
+  color: white;
+  padding: 3px 8px;
+  background-color: rgb(16, 108, 73);
+}
+
+.material-symbols-outlined {
+  font-size: 35px;
+  vertical-align: middle;
+}
+
+.menu-component {
+  display: none;
+}
+
+
+.menu-component.open{
   display: block;
-  height: 80vh;
-  width: 96vw;
-  position: absolute;
-  top: 130px;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-align-items: start;
-gap: 40px;
-margin-left:-20px ;
-}
-
-.desktop-menu.open li{
-  font-size: 40px;
-  font-weight: 400;
-}
-
-.desktop-menu.open .material-symbols-outlined {
-  font-size: 45px;
-  transform: translate(4px, 4px);
+ 
 }
