--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
+
 }
 
 body , html{
   overflow: auto;
   height: 100%;
+  overflow-x: hidden;
 }
 
 
