--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,7 @@
+.header{
+  z-index: 20000;
+}
+
 @media (min-width: 1200px) {
   .header{
     overflow-y: visible;
@@ -10,7 +14,7 @@
     justify-content: space-around;
   }
 
-  .hamburger-icon {
+  .bars-container {
     display: none;
   }
 
@@ -26,9 +30,7 @@
     position: absolute;
     top: 100%;left: -60%;
     width: 350px;
-    height: 430px;
-    border: 1px solid black;
-
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5)
 
   }
   
@@ -43,35 +45,25 @@
     justify-content: space-between;
   }
 
-  .hamburger-icon {
-    margin-right: 25px;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.466);
-    padding: 4px;
-    cursor: pointer;
-  }
-  .hamburger-icon:hover {
-    border: 1px solid rgba(0, 0, 0, 0.166);
-  }
-
   .header-menu.open {
     display: flex;
     flex-direction: column;
     position: fixed; 
-    top: 135px;
+    top: 100px;
     left: 0;
     width: 100vw;
-    height: 79vh;
+    height: 90vh;
     background-color: white; 
     z-index: 1000;
     overflow-y: auto;
-    padding: 2rem;
+    padding: 3rem;
     box-sizing: border-box;
   }
   
   .header-menu.open li{
     font-size: 42px;
     font-weight: 500;
+    margin-top: 20px;
     text-align: left;
   }
 
@@ -96,13 +88,13 @@
 }
 .header-menu li:hover {
   list-style: none;
-  color: green;
+  color: rgb(99, 58, 30);
 }
 
 .header .logo {
   width: 200px;
-  height: 150px;
-  margin-top:  20px;
+  height: 80px;
+  margin-top:  10px;
   margin-left:  48px;
 }
 
@@ -110,7 +102,7 @@
   all: unset;
   color: white;
   padding: 3px 8px;
-  background-color: rgb(16, 108, 73);
+  background-color: rgb(99, 58, 30);
 }
 
 .material-symbols-outlined {
