--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,8 +1,13 @@
+.menu{
+  z-index: 10000;
+  background-color: white;
+  height: 420px;
+
+}
 .menu ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0% ;
   padding: 0;
 }
 
@@ -50,5 +55,5 @@ border-bottom: 1px solid rgba(0, 0, 0, 0.363);
  }
 
  .menu ul li div:hover h2{
-    color: green;
+    color: rgb(105, 67, 44);
  }
