--- a/src/components/branches/branches.css
+++ b/src/components/branches/branches.css
@@ -1,7 +1,7 @@
 .branches {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(72, 53, 37);
+    background-color: rgb(67, 41, 17);
   display: flex;
   flex-direction: row-reverse;
 justify-content: center;
@@ -49,5 +49,13 @@ color: rgb(108, 90, 70);
     }
     .branches ul li{
         font-size: 6.5em;
+    }
+}
+
+
+@media (min-width: 1200px) {
+    .branches ul li{
+        font-size: 9em;
+        font-weight: 800;
     }
 }
